Added some room functionality and global variables

--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
     <option value="5">5</option>
   </select>
   rooms.</h1>
+  <input type="range" id='split' min=0 max=2500 step=50>
 
-<svg id="dashboard">
-  <g id="rooms_display">
-    <g class="room" id="room_1">
-      <line x1="0" y1="200" x2="150" y2="200" style="stroke:#006600;"></line>
-    </g>
-  </g>
-</svg>
+<div id="rooms_display">
+  
+</div>
 
 
 
