--- a/index.html
+++ b/index.html
@@ -17,8 +17,21 @@
     <option value="5">5</option>
   </select>
   rooms.</h1>
-  <input type="range" id='split' min=0 max=2500 step=50>
+  <h1>The rent is <input type="number" id='rent' value=2500></input></h1>
+  <input type="range" id='split' min=0 max=100 step=1  value=80 />
+  <div id="sharesDiv">
+    <div class="shares" id="roomShare">
+      <h3><p class="cost" id="roomCost"></p>$2000</h3>
+      <h3><p class="percent" id="roomPercent">%80</p></h3>
+    </div>
+    <div class="shares" id="personShare">
+      <h3><p class="cost" id="personCost"></p>$500</h3>
+      <h3><p class="percent" id="personPercent"></p>%20</h3>
+    </div>
+  </div>
 
+
+<!-- <svg width="100" height="100" style="border:solid 2px #006600;" id='test'></svg> -->
 <div id="rooms_display">
   
 </div>
