--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
   <input type="range" id='split' min=0 max=100 step=1  value=80 />
   <div id="sharesDiv">
     <div class="shares" id="roomShare">
-      <h3><p class="cost" id="roomCost"></p>$2000</h3>
+      <h3><p>Cost of Rooms</p></h3>
+      <h3><p class="cost" id="roomCost">$2000</p></h3>
       <h3><p class="percent" id="roomPercent">%80</p></h3>
     </div>
+
     <div class="shares" id="personShare">
-      <h3><p class="cost" id="personCost"></p>$500</h3>
-      <h3><p class="percent" id="personPercent"></p>%20</h3>
+      <h3><p>Cost of People</p></h3>
+      <h3><p class="cost" id="personCost">$500</p></h3>
+      <h3><p class="percent" id="personPercent">%20</p></h3>
     </div>
   </div>
 
