proof of concept for graphics

--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
     </div>
   </div>
 
-<div id="rooms_display">
-  
-</div>
+  <svg width="90%" height="250px" style="border:solid 2px #006600;" id='svgTest'>
+    <line x1="100" y1="230" x2="1000" y2="230" style="stroke:black;stroke-width:3"></line>
+    <rect x="100" y="130" height="100" width="180" style="stroke:black;stroke-width:3;fill:green;"></rect>
+    <rect x="100" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:3;"></rect>
+    <rect x="280" y="130" height="100" width="180" style="stroke:black;stroke-width:3;fill:green;"></rect>
+    <rect x="280" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:3;"></rect>
+    <rect x="280" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:3;"></rect>
+  </svg>
+
+  <div id="rooms_display">
+    
+  </div>
 
   
 </body>
