--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <h1>There are
-  <input type="number" value=1 id="room_count" />
+  <input type="number" value=1 id="room_count" min="1" max="5"/>
   rooms.</h1>
   <h1>The rent is <input type="number" id='rent' value=2500></input></h1>
   <input type="range" id='split' min=0 max=100 step=1  value=80 />
@@ -27,13 +27,34 @@
     </div>
   </div>
 
-  <svg width="90%" height="250px" style="border:solid 2px #006600;" id='svgTest'>
-    <line x1="100" y1="230" x2="1000" y2="230" style="stroke:black;stroke-width:3"></line>
-    <rect x="100" y="130" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+  <svg width="90%" height="300px" style="border:solid 2px #006600;" id='svgTest'>
+    <!-- base line -->
+    <line x1="100" y1="280" x2="1000" y2="280" style="stroke:black;stroke-width:3"></line>
+    <!-- room 1 -->
+    <rect x="100" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+    <rect x="100" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
     <rect x="100" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="280" y="130" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+    <rect x="100" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <!-- room 2 -->
+    <rect x="280" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+    <rect x="280" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
     <rect x="280" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
     <rect x="280" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <!-- room 3 -->
+    <rect x="460" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+    <rect x="460" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <rect x="460" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <rect x="460" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <!-- room 4 -->
+    <rect x="640" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+    <rect x="640" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <rect x="640" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <rect x="640" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <!-- room 5 -->
+    <rect x="820" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+    <rect x="820" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <rect x="820" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <rect x="820" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
   </svg>
 
   <div id="rooms_display">
