--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 
 <svg width="90%" height="250px" style="border:solid 2px #006600;" id='svgTest'>
-  <rect x="20" y="20" height="50" width="50" style="stroke:#006600;" />
-</svg>
+<!--   <rect x="20" y="20" height="50" width="50" style="stroke:#006600;" />
+ --></svg>
 <div id="rooms_display">
   
 </div>
