--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!-- base line -->
     <line x1="100" y1="280" x2="1000" y2="280" style="stroke:black;stroke-width:3"></line>
     <!-- room 1 -->
-    <rect x="100" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
-    <rect x="100" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <rect id="room1" x="100" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+    <rect class="person1" x="100" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
     <rect x="100" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
     <rect x="100" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
     <!-- room 2 -->
