--- a/index.html
+++ b/index.html
@@ -31,30 +31,40 @@
     <!-- base line -->
     <line x1="100" y1="280" x2="1000" y2="280" style="stroke:black;stroke-width:3"></line>
     <!-- room 1 -->
-    <rect id="room1" x="100" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
-    <rect class="person1" x="100" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="100" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="100" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <g id="room1">
+      <rect class="roomSVG" x="100" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+      <rect class="person1" x="100" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person2" x="100" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person3" x="100" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    </g>
     <!-- room 2 -->
-    <rect x="280" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
-    <rect x="280" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="280" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="280" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <g id="room2">
+      <rect class="roomSVG" x="280" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+      <rect class="person1" x="280" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person2" x="280" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person3" x="280" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    </g>
     <!-- room 3 -->
-    <rect x="460" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
-    <rect x="460" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="460" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="460" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <g id="room3">
+      <rect class="roomSVG" x="460" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+      <rect class="person1" x="460" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person2" x="460" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person3" x="460" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    </g>
     <!-- room 4 -->
-    <rect x="640" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
-    <rect x="640" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="640" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="640" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <g id="room4">
+      <rect class="roomSVG" x="640" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+      <rect class="person1" x="640" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person2" x="640" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person3" x="640" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    </g>
     <!-- room 5 -->
-    <rect x="820" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
-    <rect x="820" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="820" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
-    <rect x="820" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    <g id="room5">
+      <rect class="roomSVG" x="820" y="180" height="100" width="180" style="stroke:black;stroke-width:2;fill:green;"></rect>
+      <rect class="person1" x="820" y="130" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person2" x="820" y="80" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+      <rect class="person3" x="820" y="30" height="50" width="180" style="fill:red;stroke:black;stroke-width:2;"></rect>
+    </g>
   </svg>
 
   <div id="rooms_display">
