Made the shares numbers under the slider dynamically based off the slider upon loading

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <input type="number" value=1 id="room_count" min="1" max="5"/>
   rooms.</h1>
   <h1>The rent is <input type="number" id='rent' value=2500></input></h1>
-  <input type="range" id='split' min=0 max=100 step=1  value=80 />
+  <input type="range" id='split' min=0 max=100 step=1  value=72 />
   <div id="sharesDiv">
     <div class="shares" id="roomShare">
       <h3><p>Cost of Rooms</p></h3>
-      <h3><p class="cost" id="roomCost">$2000</p></h3>
-      <h3><p class="percent" id="roomPercent">%80</p></h3>
+      <h3><p class="cost" id="roomCost"></p></h3>
+      <h3><p class="percent" id="roomPercent"></p></h3>
     </div>
 
     <div class="shares" id="personShare">
       <h3><p>Cost of People</p></h3>
-      <h3><p class="cost" id="personCost">$500</p></h3>
-      <h3><p class="percent" id="personPercent">%20</p></h3>
+      <h3><p class="cost" id="personCost"></p></h3>
+      <h3><p class="percent" id="personPercent"></p></h3>
     </div>
   </div>
 
