inported d3.min.js, recreating barchart with d3

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-  <h1>There are
+  <h1>How many rooms?
   <input type="number" value=1 id="room_count" min="1" max="5"/>
-  rooms.</h1>
+  </h1>
   <h1>The rent is <input type="number" id='rent' value=2500></input></h1>
   <input type="range" id='split' min=0 max=100 step=1  value=72 />
   <div id="sharesDiv">
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <svg width="90%" height="300px" style="border:solid 2px #006600;" id='svgTest'>
+  <svg width="90%" height="300px" style="border:solid 2px #006600;" id='svgBoard'>
     <!-- base line -->
     <line x1="100" y1="280" x2="1000" y2="280" style="stroke:black;stroke-width:3"></line>
     <!-- room 1 -->
